// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Boolean Control > should render a boolean control 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"absolute select-none z-24 w-280px font-sans text-xs\\">
  <div class=\\"bg-white shadow-xl rounded border-4 border-solid border-black\\">
    <header class=\\"relative cursor-grabbing p-4 flex justify-between text-gray-200 relative\\"><i class=\\"h-4 w-4 p-1.5 flex items-center line-height-0 rounded-full bg-gray-100 text-xs\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i></div>
      <div></div>
    </header>
    <!--v-if-->
    <div class=\\"flex px-4 justify-start gap-2 items-center mb-2 min-h-32px\\"><label class=\\"text-gray-500 w-1/3\\">test</label><input id=\\"test\\" class=\\"hidden\\" type=\\"checkbox\\"><label for=\\"test\\" class=\\"inline-flex items-center cursor-pointer\\"><span class=\\"bg-dark-500 w-4 h-4 flex justify-center items-center rounded border border-gray-300 mr-2 transition-colors duration-200\\"><i class=\\"i-ic:baseline-check text-light\\"></i></span></label></div>
  </div>
</div>"
`;

exports[`Boolean Control > should render a boolean control with a label 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"absolute select-none z-24 w-280px font-sans text-xs\\">
  <div class=\\"bg-white shadow-xl rounded border-4 border-solid border-black\\">
    <header class=\\"relative cursor-grabbing p-4 flex justify-between text-gray-200 relative\\"><i class=\\"h-4 w-4 p-1.5 flex items-center line-height-0 rounded-full bg-gray-100 text-xs\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i></div>
      <div></div>
    </header>
    <!--v-if-->
    <div class=\\"flex px-4 justify-start gap-2 items-center mb-2 min-h-32px\\"><label class=\\"text-gray-500 w-1/3\\">test</label><input id=\\"test\\" class=\\"hidden\\" type=\\"checkbox\\"><label for=\\"test\\" class=\\"inline-flex items-center cursor-pointer\\"><span class=\\"bg-dark-500 w-4 h-4 flex justify-center items-center rounded border border-gray-300 mr-2 transition-colors duration-200\\"><i class=\\"i-ic:baseline-check text-light\\"></i></span></label></div>
  </div>
</div>"
`;

exports[`TresLeches > should mount 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" id=\\"test\\" class=\\"absolute select-none z-24 w-280px font-sans text-xs\\">
  <div class=\\"bg-white shadow-xl rounded border-4 border-solid border-black\\">
    <header class=\\"relative cursor-grabbing p-4 flex justify-between text-gray-200 relative\\"><i class=\\"h-4 w-4 p-1.5 flex items-center line-height-0 rounded-full bg-gray-100 text-xs\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i><i class=\\"i-ic-baseline-drag-indicator\\"></i></div>
      <div></div>
    </header>
  </div>
</div>"
`;
